--- a/Index.HTML
+++ b/Index.HTML
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title><h1>Driftless Whiskey</h1></title>
-		<link rel="stylesheet" href="homesheet.css" type="text/css">
+		<link rel="stylesheet" href="index.css" type="text/css">
     <style>@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');</style>
 	</head>
 	<body>
